--- a/recipies_website/users/templates/users/login.html
+++ b/recipies_website/users/templates/users/login.html
@@ -9,16 +9,16 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">
-                Sign Up!
+                Login!
             </legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group py-3">
-            <input class="btn btn-outline-primary" type="submit" value="Sign Up">
+            <input class="btn btn-outline-primary" type="submit" value="Login">
         </div>
     </form>
     <div class="border-top pt-3">
-        <a class="text-muted" href="{% url 'user-login' %}">Already have an account? Log in</a>
+        <a class="text-muted" href="{% url 'user-register' %}">Don't have an account? Sign up</a>
     </div>
 </div>
 
