--- a/recipies_website/recipies/templates/recipies/base.html
+++ b/recipies_website/recipies/templates/recipies/base.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <h1>Django Recipes</h1>
             <div class="navbar-nav">
-                {% if user.authenticated %}
+                {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'user-profile' %}">My Profile</a>
                 <a class="nav-item nav-link" href="{% url 'user-logout' %}">Logout</a>
                 {% else %}
