--- a/recipies_website/recipies/templates/recipies/home.html
+++ b/recipies_website/recipies/templates/recipies/home.html
@@ -8,7 +8,7 @@
         <h6 class="card-subtitle mb-2 text-muted">{{ recipie.author}}</h6>
         <p class="card-text">{{ recipie.description}}</h6>
         <h6 class="card-subtitle mb-2 text-muted">{{ recipie.updated_at|date:"F d, Y" }}</h6>
-        <a href="#" class="card-link">View Recipe</a>
+        <a href="{% url 'recipies-detail' recipie.pk %}" class="card-link">View Recipe</a>
     </div>
 </div>
 {% endfor %}
