--- a/recipies_website/recipies/templates/recipies/recipie_confirm_delete.html
+++ b/recipies_website/recipies/templates/recipies/recipie_confirm_delete.html
@@ -8,11 +8,12 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Add Recipe</legend>
+            <legend class="mb-4">Are you sure you want to delete?</legend>
+            <h2>{{ object }}</h2>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group py-3">
-            <input class="btn btn-outline-primary" type="submit" value="Save">
+            <input class="btn btn-outline-danger" type="submit" value="Delete">
         </div>
     </form>
     <div class="border-top pt-3">
