Added proper title to all pages

--- a/recipies_website/recipies/templates/recipies/recipie_detail.html
+++ b/recipies_website/recipies/templates/recipies/recipie_detail.html
@@ -1,5 +1,9 @@
 {% extends "recipies/base.html" %}
 
+{% block title %}
+View Recipe
+{% endblock %}
+
 {% block content %}
 
 <h1>Recipe # {{ object.id }}</h1>
