--- a/recipies_website/recipies/templates/recipies/recipie_form.html
+++ b/recipies_website/recipies/templates/recipies/recipie_form.html
@@ -2,6 +2,10 @@
 
 {% load crispy_forms_tags %}
 
+{% block title %}
+Add/Update Recipe
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
