--- a/recipies_website/recipies/templates/recipies/home.html
+++ b/recipies_website/recipies/templates/recipies/home.html
@@ -1,7 +1,15 @@
 {% extends "recipies/base.html" %}
+
+{% block title %}
+Home Page
+{% endblock %}
+
 {% block content %}
+
 <h1>Recipes:</h1>
+
 {% for recipie in recipies %}
+
 <div class="card my-4">
     <div class="card-body">
         <h5 class="card-title">{{ recipie.title }}</h5>
@@ -11,5 +19,7 @@
         <a href="{% url 'recipies-detail' recipie.pk %}" class="card-link">View Recipe</a>
     </div>
 </div>
+
 {% endfor %}
+
 {% endblock content %}
