--- a/recipies_website/recipies/templates/recipies/recipie_confirm_delete.html
+++ b/recipies_website/recipies/templates/recipies/recipie_confirm_delete.html
@@ -2,6 +2,10 @@
 
 {% load crispy_forms_tags %}
 
+{% block title %}
+Confirm Recipe Deletion
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
