--- a/recipes_website/recipes/templates/recipes/recipe_confirm_delete.html
+++ b/recipes_website/recipes/templates/recipes/recipe_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "recipies/base.html" %}
+{% extends "recipes/base.html" %}
 
 {% load crispy_forms_tags %}
 
@@ -21,7 +21,7 @@ Confirm Recipe Deletion
         </div>
     </form>
     <div class="border-top pt-3">
-        <a class="text-muted" href="{% url 'recipies-home' %}">Cancel</a>
+        <a class="text-muted" href="{% url 'recipes-home' %}">Cancel</a>
     </div>
 </div>
 
