--- a/recipes_website/recipes/templates/recipes/recipe_detail.html
+++ b/recipes_website/recipes/templates/recipes/recipe_detail.html
@@ -1,4 +1,4 @@
-{% extends "recipies/base.html" %}
+{% extends "recipes/base.html" %}
 
 {% block title %}
 View Recipe
@@ -20,8 +20,8 @@ View Recipe
 
 {% if object.author == user or user.is_staff %}
 <div class="col-4">
-    <a class="btn btn-outline-info" href="{% url 'recipies-update' object.id %}">Update</a>
-    <a class="btn btn-outline-danger" href="{% url 'recipies-delete' object.id %}">Delete</a>
+    <a class="btn btn-outline-info" href="{% url 'recipes-update' object.id %}">Update</a>
+    <a class="btn btn-outline-danger" href="{% url 'recipes-delete' object.id %}">Delete</a>
 </div>
 {% endif %}
 
