--- a/recipes_website/recipes/templates/recipes/recipe_form.html
+++ b/recipes_website/recipes/templates/recipes/recipe_form.html
@@ -1,9 +1,9 @@
-{% extends "recipies/base.html" %}
+{% extends "recipes/base.html" %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}
-Register
+Add/Update Recipe
 {% endblock %}
 
 {% block content %}
@@ -12,18 +12,16 @@ Register
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">
-                Sign Up!
-            </legend>
+            <legend class="border-bottom mb-4">Add Recipe</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group py-3">
-            <input class="btn btn-outline-primary" type="submit" value="Sign Up">
+            <input class="btn btn-outline-primary" type="submit" value="Save">
         </div>
     </form>
     <div class="border-top pt-3">
-        <a class="text-muted" href="{% url 'user-login' %}">Already have an account? Log in</a>
+        <a class="text-muted" href="{% url 'recipes-home' %}">Cancel</a>
     </div>
 </div>
 
-{% endblock content %}
+{% endblock %}
