--- a/recipes_website/users/templates/users/login.html
+++ b/recipes_website/users/templates/users/login.html
@@ -1,9 +1,9 @@
-{% extends "recipies/base.html" %}
+{% extends "recipes/base.html" %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}
-Add/Update Recipe
+Login
 {% endblock %}
 
 {% block content %}
@@ -12,16 +12,18 @@ Add/Update Recipe
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Add Recipe</legend>
+            <legend class="border-bottom mb-4">
+                Login!
+            </legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group py-3">
-            <input class="btn btn-outline-primary" type="submit" value="Save">
+            <input class="btn btn-outline-primary" type="submit" value="Login">
         </div>
     </form>
     <div class="border-top pt-3">
-        <a class="text-muted" href="{% url 'recipies-home' %}">Cancel</a>
+        <a class="text-muted" href="{% url 'user-register' %}">Don't have an account? Sign up</a>
     </div>
 </div>
 
-{% endblock %}
+{% endblock content %}
