--- a/recipes_website/users/templates/users/register.html
+++ b/recipes_website/users/templates/users/register.html
@@ -1,9 +1,9 @@
-{% extends "recipies/base.html" %}
+{% extends "recipes/base.html" %}
 
 {% load crispy_forms_tags %}
 
 {% block title %}
-Login
+Register
 {% endblock %}
 
 {% block content %}
@@ -13,16 +13,16 @@ Login
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">
-                Login!
+                Sign Up!
             </legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group py-3">
-            <input class="btn btn-outline-primary" type="submit" value="Login">
+            <input class="btn btn-outline-primary" type="submit" value="Sign Up">
         </div>
     </form>
     <div class="border-top pt-3">
-        <a class="text-muted" href="{% url 'user-register' %}">Don't have an account? Sign up</a>
+        <a class="text-muted" href="{% url 'user-login' %}">Already have an account? Log in</a>
     </div>
 </div>
 
