--- a/recipes_website/recipes/templates/recipes/home.html
+++ b/recipes_website/recipes/templates/recipes/home.html
@@ -8,18 +8,45 @@ Home Page
 
 <h1>Recipes:</h1>
 
-{% for recipe in recipes %}
+<div class="border-top">
+    {% for recipe in recipes %}
 
-<div class="card my-4">
-    <div class="card-body">
-        <h5 class="card-title">{{ recipe.title }}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{ recipe.author}}</h6>
-        <p class="card-text">{{ recipe.description}}</h6>
-        <h6 class="card-subtitle mb-2 text-muted">{{ recipe.updated_at|date:"F d, Y" }}</h6>
-        <a href="{% url 'recipes-detail' recipe.pk %}" class="card-link">View Recipe</a>
+    <div class="card my-4">
+        <div class="card-body">
+            <h5 class="card-title">{{ recipe.title }}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{ recipe.author}}</h6>
+            <p class="card-text">{{ recipe.description}}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{ recipe.updated_at|date:"F d, Y" }}</h6>
+            <a href="{% url 'recipes-detail' recipe.pk %}" class="card-link">View Recipe</a>
+        </div>
     </div>
+
+    {% endfor %}
 </div>
 
-{% endfor %}
+<h1>Feedback:</h1>
+<div class="border-top">
+    <div class="card my-4">
+        <div class="card-body">
+            <h5 class="card-title">Good recipes</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Bob</h6>
+            <p class="card-text">This website has a few good recipes</h6>
+        </div>
+    </div>
+    <div class="card my-4">
+        <div class="card-body">
+            <h5 class="card-title">The food was nice</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Fred</h6>
+            <p class="card-text">The recipies are nice</h6>
+        </div>
+    </div>
+    <div class="card my-4">
+        <div class="card-body">
+            <h5 class="card-title">This website is really useful</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Bob</h6>
+            <p class="card-text">This website has some useful recipes</h6>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
