--- a/recipes_website/recipes/templates/recipes/recipe_detail.html
+++ b/recipes_website/recipes/templates/recipes/recipe_detail.html
@@ -11,6 +11,8 @@ View Recipe
     <div class="card-body">
         <h5 class="card-title">{{ object.title }}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{ object.author }}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">Category: {{ object.category }}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">Meal Time: {{ object.meal_time }}</h6>
         <p class="card-text">
             {{ object.description }}
             <p />
