Used the display text for the category and meal time fields

--- a/recipes_website/recipes/templates/recipes/home.html
+++ b/recipes_website/recipes/templates/recipes/home.html
@@ -6,8 +6,7 @@ Home Page
 
 {% block content %}
 
-<h1>Recipes:</h1>
-
+<h1>All Recipes:</h1>
 <div class="border-top">
     {% for recipe in recipes %}
 
