--- a/recipes_website/recipes/templates/recipes/base.html
+++ b/recipes_website/recipes/templates/recipes/base.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %} {% endblock %}</title>
+        <title>Chef Recipes - {% block title %} {% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
@@ -60,7 +60,19 @@
             {% block content %} {% endblock %}
         </main>
         <footer>
-            <p>&copy; 2024 Recipes. All rights reserved.</p>
+            <div class="container">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                    <p class="col-md-4 mb-0 text-muted">&copy; 2024 Chef Recipes</p>
+                    <img src="{% static 'logo.jpg' %}" alt="Logo Image" width="60px">
+                    <ul class="justify-content-end">
+                        <a class="nav-link px-2 text-muted">Developer: Luke Vercoe</a>
+                        <a class="nav-link px-2 text-muted">Email: luke.vercoe@techtorium.ac.nz</a>
+                        <a class="nav-link px-2 text-muted">Github: https://github.com/Luke-Vercoe-Techtorium</a>
+                        <a class="nav-link px-2 text-muted">Linkedin:
+                            https://www.linkedin.com/in/luke-vercoe-5873492ab/</a>
+                    </ul>
+                </footer>
+            </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
