--- a/recipes_website/recipes/templates/recipes/base.html
+++ b/recipes_website/recipes/templates/recipes/base.html
@@ -25,6 +25,7 @@
                         <a class="dropdown-item" href="{% url 'recipes-breakfast' %}">Breakfast</a>
                         <a class="dropdown-item" href="{% url 'recipes-lunch' %}">Lunch</a>
                         <a class="dropdown-item" href="{% url 'recipes-dinner' %}">Dinner</a>
+                        <a class="dropdown-item" href="{% url 'recipes-dessert' %}">Dessert</a>
                     </div>
                 </div>
             </div>
