--- a/recipes_website/recipes/templates/recipes/home.html
+++ b/recipes_website/recipes/templates/recipes/home.html
@@ -9,17 +9,7 @@ Home Page
 <h1>All Recipes:</h1>
 <div class="border-top">
     {% for recipe in recipes %}
-
-    <div class="card my-4">
-        <div class="card-body">
-            <h5 class="card-title">{{ recipe.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ recipe.author }}</h6>
-            <h6 class="card-text">{{ recipe.description|linebreaksbr }}</h6>
-            <h6 class="card-subtitle mb-2 text-muted">{{ recipe.updated_at|date:"F d, Y" }}</h6>
-            <a href="{% url 'recipes-detail' recipe.pk %}" class="card-link">View Recipe</a>
-        </div>
-    </div>
-
+    {% include "recipes/recipe_display.html" %}
     {% endfor %}
 </div>
 
