Tweaked the recipe display

--- a/recipes_website/recipes/templates/recipes/recipe_display.html
+++ b/recipes_website/recipes/templates/recipes/recipe_display.html
@@ -1,7 +1,7 @@
 <div class="card my-4">
     <div class="card-body">
         <h5 class="card-title">{{ recipe.title }}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{ recipe.author }}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">Author: {{ recipe.author }}</h6>
         <h6 class="card-title">Ingredients:</h6>
         <p class="card-text">
             {{ recipe.ingredients|linebreaksbr }}
