--- a/recipes_website/recipes/templates/recipes/recipe_detail.html
+++ b/recipes_website/recipes/templates/recipes/recipe_detail.html
@@ -10,9 +10,9 @@ View Recipe
 <div class="card my-4">
     <div class="card-body">
         <h5 class="card-title">{{ object.title }}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{ object.author }}</h6>
-        <h6 class="card-subtitle mb-2 text-muted">Category: {{ object.get_category_display }}</h6>
-        <h6 class="card-subtitle mb-2 text-muted">Meal Time: {{ object.get_meal_time_display }}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">Author: {{ object.author }}</h6>
+        <h6 class="card-title">Category: {{ object.get_category_display }}</h6>
+        <h6 class="card-title">Meal Time: {{ object.get_meal_time_display }}</h6>
         <h6 class="card-title">Ingredients:</h6>
         <p class="card-text">
             {{ object.ingredients|linebreaksbr }}
@@ -21,7 +21,7 @@ View Recipe
         <p class="card-text">
             {{ object.description|linebreaksbr }}
             <p />
-        <h6 class="card-subtitle mb-2 text-muted">{{ object.updated_at|date:"F d, Y" }}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">Date: {{ object.updated_at|date:"F d, Y" }}</h6>
     </div>
 </div>
 
